Fix vertical alignment in layout rows

--- a/byceps/blueprints/core_admin/static/style/admin.css
+++ b/byceps/blueprints/core_admin/static/style/admin.css
@@ -22,6 +22,7 @@ a {
 /* grid */
 
 .row {
+  align-items: baseline;
   display: flex;
   flex-wrap: wrap;
   margin: -20px 0 0 -20px;
